edit link, add certification status

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </header>
             <div class="concise" style="padding-bottom: 8px;">
               <ul>
-                <li>2022 - Python - Will take the PCAP exam in 24 Oct 2022</li>
+                <li>2022 - Python - PCAP-31-03 Certified</li>
                 <li>2022 - Machine Learning with Tensorflow</li>
                 <li>2019 - Data Quality using SQL Server 2017</li>
                 <li>2019 - Data Analysis with R</li>
@@ -210,7 +210,7 @@
           Contact Info
         </h1>
         <ul>
-          <li><i class="fa fa-globe"></i> <a href="https://meidianarahmawati.github.io/cv">meidianarahmawati.github.io/cv</a></li>
+          <li><i class="fa fa-globe"></i> <a href="https://meidianarahmawati.github.io/fullcv/seemore">https://s.id/meidianaFullCV</a></li>
           <li><i class="fa fa-linkedin"></i> <a href="https://linkedin.com/in/meidiana-r">linkedin.com/in/meidiana-r</a></li>
           <li><i class="fa fa-envelope"></i> <a href="mailto:meidianarahmawati@gmail.com">meidianarahmawati@gmail.com</a></li>
           <li><i class="fa fa-phone"></i> <a href="https://wa.me/6287886501376">6287886501376</a></li>
@@ -221,6 +221,7 @@
           Skills
         </h1>
         <ul>
+          <li>Fast Learner</li>
           <li>Focus</li>
           <li>Attention to details</li>
           <li>Helpful</li>
