--- a/seemore.html
+++ b/seemore.html
@@ -517,7 +517,7 @@
           <div class="details">
             <div>
               <ul>
-                <li>Programming Essentials in Python (2 months) in Cisco NetAcad. Will take the PCAP exam in 24 October 2022.</li>
+                <li>Programming Essentials in Python (2 months) in Cisco NetAcad. PCAP-31-03 Certified.</li>
                 <li>Machine Learning with Tensorflow (3 months)</li>
               </ul>
             </div>
@@ -647,7 +647,7 @@
           <div class="details">
             <div>
               <ul>
-                <li>ITIL v3 Foundation (1 week)</li>
+                <li>ITIL v3 Foundation (1 week). Certified for 2 years (2016-2018).</li>
                 <li>IT Governance with COBIT (1 week)</li>
               </ul>
             </div>
@@ -706,7 +706,7 @@
           Contact Info
         </h1>
         <ul>
-          <li><i class="fa fa-globe"></i> <a href="https://meidianarahmawati.github.io/cv">meidianarahmawati.github.io/cv</a></li>
+          <li><i class="fa fa-globe"></i> <a href="https://meidianarahmawati.github.io/fullcv/seemore">https://s.id/meidianaFullCV</a></li>
           <li><i class="fa fa-linkedin"></i> <a href="https://linkedin.com/in/meidiana-r">linkedin.com/in/meidiana-r</a></li>
           <li><i class="fa fa-envelope"></i> <a href="mailto:meidianarahmawati@gmail.com">meidianarahmawati@gmail.com</a></li>
           <li><i class="fa fa-phone"></i> <a href="https://wa.me/6287886501376">6287886501376</a></li>
@@ -717,6 +717,7 @@
           Skills
         </h1>
         <ul>
+          <li>Fast Learner</li>
           <li>Focus</li>
           <li>Attention to details</li>
           <li>Helpful</li>
